# gui4aws

./: .pydoctest.json  .pylintrc  .pylintrc_spell  .pylintrc_tests  AGENTS.md  CHANGELOG.md  Makefile  README.md  coverage.json  find_privates.py  junit.xml  mkdocs.yml  private_dictionary.txt  pyproject.toml  refactor_privates.py  tox.ini
.github/workflows/: build.yml  publish_to_pypi.yml  release.yml  tox.yml
docs/: index.md  installation.md
docs/extending/: CONTRIBUTING.md
docs/overview/: README.md
docs/usage/: quickstart.md
gui4aws/: __about__.py  __init__.py  __main__.py  app.py  cli.py  config.py  demo_resources.py  logging_config.py  models.py  moto_server.py  robotocore_server.py
gui4aws/demo_resources/: __init__.py  _common.py  aurora.py  backup.py  compute.py  ecs.py  iam_resources.py  kms.py  messaging.py  monitoring.py  networking.py  secrets.py  storage.py  verification.py
gui4aws/execution/: __init__.py  action_cache.py  action_history.py  aws_cli_executor.py  boto3_executor.py  endpoint_config.py  execution_mode.py  network_config.py  script_generator.py
gui4aws/gui/: __init__.py  action_dialog.py  action_form.py  cdk_dialog.py  confirmation_dialog.py  detail_tree.py  diagnostic_panel.py  filter_bar.py  jmespath_designer_dialog.py  json_viewer_dialog.py  main_panel.py  main_window.py  network_settings_dialog.py  output_panel.py  resource_table.py  review_dialog.py  script_editor_panel.py  script_viewer.py  server_manager_mixin.py  sidebar.py  sql_runner_dialog.py  status_bar.py  terraform_dialog.py  toolbar.py  window_helpers.py  worker.py
gui4aws/services/: __init__.py  service_registry.py
gui4aws/services/athena/: __init__.py  actions.py  models.py  service.py  views.py
gui4aws/services/aurora/: __init__.py  actions.py  models.py  service.py  views.py
gui4aws/services/backup/: __init__.py  actions.py  models.py  service.py  views.py
gui4aws/services/cloudformation/: actions.py  models.py  service.py  views.py
gui4aws/services/cloudwatch/: actions.py  models.py  service.py  views.py
gui4aws/services/ecs/: __init__.py  actions.py  models.py  service.py  views.py
gui4aws/services/iam/: actions.py  models.py  service.py  views.py
gui4aws/services/kms/: __init__.py  actions.py  models.py  service.py  views.py
gui4aws/services/lambdas/: actions.py  models.py  service.py  views.py
gui4aws/services/networking/: __init__.py  actions.py  models.py  service.py  views.py
gui4aws/services/s3/: actions.py  models.py  service.py  views.py
gui4aws/services/secrets/: __init__.py  actions.py  models.py  service.py  views.py
gui4aws/services/ses/: actions.py  models.py  service.py  views.py
gui4aws/services/sns/: actions.py  models.py  service.py  views.py
gui4aws/services/sqs/: actions.py  models.py  service.py  views.py
gui4aws/services/ssm/: __init__.py  actions.py  models.py  service.py  views.py
gui4aws/sql_runner/: __init__.py  connection.py
gui4aws/testing/: __init__.py  moto_support.py
scripts/: basic_checks.sh
spec/: MAY_TODO.md  MAY_TODO2.md  SECURITY_REVIEW.md  bug_troml_dev_status.md  coverage_plan.md  demo_safety.md  mutually_exclusive.md  phases.md  spec.md  testing_tkinter.md  threading_current_state.md
spec/bugs_moto/: models.py  repro.md  repro.sh
tests/: conftest.py  test_action_cache.py  test_action_form.py  test_action_history.py  test_app_context.py  test_aurora_actions.py  test_aws_cli_executor.py  test_backup_actions.py  test_boto3_executor_extended.py  test_cli.py  test_cloudformation_actions.py  test_cloudwatch_actions.py  test_config.py  test_demo_menu_gate.py  test_demo_resources.py  test_demo_verification.py  test_dialogs.py  test_ecs_actions.py  test_endpoint_config.py  test_iac_dialogs.py  test_iam_actions.py  test_kms_actions.py  test_lambda_actions.py  test_main_window_aurora.py  test_main_window_cache.py  test_main_window_target.py  test_models_pure.py  test_moto_server_tk.py  test_network_config.py  test_networking_actions.py  test_phase4_write_flows.py  test_s3_actions.py  test_script_generator.py  test_script_generator_extended.py  test_secrets_actions.py  test_service_registry.py  test_ses_actions.py  test_sns_actions.py  test_sqs_actions.py  test_ssm_actions.py  (+2 more)
tests_robotocore/: conftest.py  test_robotocore.py
